Add region tags for publication and certification

Both TMDB and IMDB publish region specific information for this metadata.

This fixes https://bugzilla.gnome.org/show_bug.cgi?id=679686